--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,27 @@
-* {
+body {
     box-sizing: border-box;
+    margin: 0 auto;
 }
 
-ul,
-ol {
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-img {
-    cursor: pointer;
+li {
+    list-style-type: none;
 }
 
 .gallery {
-    margin: 24px 12px;
+    margin: 24px;
+    padding-left: 0;
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    justify-content: center;
 }
 
-.gallery img {
+.gallery-image {
+    width: 400px;
+    height: 240px;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    width: calc((100% - 48px) / 3);
+    align-content: flex-start;
 }
