--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,22 @@
-body {
-    box-sizing: border-box;
-    margin: 0 auto;
-}
-
-li {
-    list-style-type: none;
-}
-
 .gallery {
-    margin: 24px;
-    padding-left: 0;
+    margin: 0;
+    padding: 24px;
     display: flex;
     flex-wrap: wrap;
+    list-style: none;
+    background: #fff;
     gap: 24px;
-    justify-content: center;
 }
 
-.gallery-image {
-    width: 400px;
-    height: 240px;
-    flex-shrink: 0;
+.gallery-item {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: flex-start;
+    align-items: flex-start;
+    width: calc((100% - 48px) / 3);
+}
+
+.gallery-image {
+    width: 416px;
+    height: 240px;
 }
